k8s/runtime/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hhm
  labels:
    app.kubernetes.io/part-of: hhm
